test/classes/errors/newValueNotType2.compopts
--ignore-errors-for-pass --no-legacy-classes  # newValueNotType2.good
--ignore-errors-for-pass --legacy-classes     # newValueNotType2.legacy.good
